puch to remote repository master from TraderPC

--- a/Pixel Art World/src/main/res/values-fr/arrays.xml
+++ b/Pixel Art World/src/main/res/values-fr/arrays.xml
@@ -2,10 +2,12 @@
 <resources>
 
     <string-array name="maindrawermenu">
-        <item>Nouveau</item>
+        <item>Nouveau Dessin</item>
+        <item>Ouvrir Dessin</item>
+        <item>Nouveau GIF</item>
+        <item>Ouvrir GIF</item>
         <item>Partagé</item>
         <item>Supprimé</item>
-        <item>Ouvrir</item>
         <item>Préférences</item>
         </string-array>
 </resources>
