puch to remote repository master from TraderPC

--- a/Pixel Art World/src/main/res/layout/activity_main.xml
+++ b/Pixel Art World/src/main/res/layout/activity_main.xml
@@ -88,7 +88,8 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_gravity="center"
-                    android:background="#fb0000" />
+                    android:background="#fb0000"
+                                    />
             </FrameLayout>
 
             <FrameLayout
