--- a/Pixel Art World/src/main/res/values-fr/arrays.xml
+++ b/Pixel Art World/src/main/res/values-fr/arrays.xml
@@ -8,6 +8,6 @@
         <item>Ouvrir GIF</item>
         <item>Partagé</item>
         <item>Supprimé</item>
-        <item>Préférences</item>
+        <!--<item>Préférences</item>-->
         </string-array>
 </resources>
