--- a/Pixel Art World/src/main/res/values-v11/styles.xml
+++ b/Pixel Art World/src/main/res/values-v11/styles.xml
@@ -7,5 +7,8 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <!-- API 11 theme customizations can go here. -->
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 
 </resources>
