--- a/Pixel Art World/src/main/res/values-v14/styles.xml
+++ b/Pixel Art World/src/main/res/values-v14/styles.xml
@@ -8,5 +8,8 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- API 14 theme customizations can go here. -->
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 
 </resources>
