--- a/Pixel Art World/src/main/res/values/styles.xml
+++ b/Pixel Art World/src/main/res/values/styles.xml
@@ -16,8 +16,11 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-    
-         
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
              <style name="Theme.Holo.Light.NoActionBar" parent="android:Theme.Holo.Light">
                   <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
